<resources>
    <string name="app_name">Scrum Me</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_sort_by_importance">By Importance</string>
    <string name="action_sort_by_date_added">By Date Added</string>
    <string name="action_sort_by_in_sprint">In Sprint</string>
    <string name="sprint_title">Sprint # </string>
    <string name="start_sprint">Start Sprint!</string>
    <string name="plan_sprint">(add tasks to sprint)</string>
    <string name="end_sprint">Finish Sprint!</string>
    <string name="points_in_sprint_label">In Sprint:</string>
    <string name="average_points_label">Average:</string>
    <string name="sprint_progress_good">Ahead of schedule!</string>
    <string name="sprint_progress_bad">Oh no, behind schedule :(</string>
    <string name="sprint_progress_on_track">On track!</string>
    <string name="example_start_date">March 23rd</string>
    <string name="example_end_date">March 30th</string>
    <string name="example_points_ratio">12/46</string>
    <string name="date_separator">—</string>

    <!-- Widget -->
    <string name="widget_error">Oops! Sign in to view</string>
    <string name="widget_title">Sprint Tracker</string>

    <!-- Adding and Removing Toasts-->
    <string name="removed_task">Removed!</string>
    <string name="undo_remove">Undo?</string>

    <!-- Task Card Strings -->
    <string name="card_example_desc">Finish card layout file</string>
    <string name="card_example_effort">5</string>
    <string name="card_add_to_sprint_text">+Sprint</string>
    <string name="card_remove_from_sprint_text">-Sprint</string>
    <string name="card_delete_task">Delete</string>
    <string name="card_mark_complete">Complete</string>
    <string name="card_undo_complete">Undo</string>

    <!-- Add new Task Strings -->
    <string name="new_task_header">Add New Task</string>
    <string name="modify_task_header">Modify Task</string>
    <string-array name="task_effort">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>8</item>
        <item>13</item>
        <item>21</item>
        <item>34</item>
        <item>55</item>
    </string-array>

    <string-array name="task_importance">
        <item>Critical</item>
        <item>Important</item>
        <item>Somewhat Important</item>
        <item>Not Important</item>
    </string-array>

    <string name="task_in_sprint_switch">Add to sprint?</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="effort">Effort:</string>
    <string name="importance">Importance:</string>
    <string name="description">Description:</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="sprint_length_entries">
        <item>1 week sprint</item>
        <item>2 week sprint</item>
        <item>3 week sprint</item>
        <item>4 week sprint</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <!-- Dialog Strings -->
    <string name="dialog_starting_effort_label">Starting:</string>
    <string name="dialog_starting_effort_example">46</string>
    <string name="dialog_ending_effort_label">Ending:</string>
    <string name="dialog_ending_effort_example">52</string>
    <string name="dialog_completed_effort_label">Completed:</string>
    <string name="dialog_completed_effort_example">48</string>
    <string name="dialog_sprint_complete">Complete!</string>
</resources>
