<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="3dp"
    android:id="@+id/card_view_top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_card_description"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="@string/card_example_desc"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_card_effort"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:background="@drawable/ic_yellow_circle"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                tools:text="@string/card_example_effort" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/card_button_add_remove"
                android:theme="@style/PrimaryFlatButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/card_add_to_sprint_text"/>
            <Button
                android:id="@+id/card_button_delete"
                android:theme="@style/PrimaryFlatButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/card_delete_task"/>
            <Button
                android:id="@+id/card_button_complete"
                android:theme="@style/PrimaryFlatButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/card_mark_complete"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>