<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/frame_widget"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/widget_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/tv_widget_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        tools:text="Oops! Sign in again"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linear_layout_progress_holder"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_title"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/widget_progress_bar"
            tools:progress="50"
            tools:secondaryProgress="70"
            android:indeterminate="false"
            style="?android:attr/progressBarStyleHorizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/tv_widget_progress_description"
                tools:text="@string/sprint_progress_bad"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_widget_points"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:textAlignment="viewEnd"
                tools:text="@string/example_points_ratio" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>