<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
>

    <TextView
        android:id="@+id/tv_sprint_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sprint_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/spinner_sprint_length"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sprint_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/spinner_sprint_length"
        app:layout_constraintStart_toEndOf="@+id/tv_sprint_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="13" />

    <Button
        android:id="@+id/button_sprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLight"
        android:textColor="@color/colorPrimaryDark"
        android:theme="@style/PrimaryFlatButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/start_sprint" />

    <TextView
        android:id="@+id/tv_points_in_sprint_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/points_in_sprint_label"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sprint_points"
        app:layout_constraintEnd_toStartOf="@+id/tv_sprint_points"
        app:layout_constraintTop_toTopOf="@+id/tv_sprint_points" />

    <TextView
        android:id="@+id/tv_sprint_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_average_sprint_points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="13" />

    <TextView
        android:id="@+id/tv_average_sprint_points_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/average_points_label"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_average_sprint_points"
        app:layout_constraintEnd_toStartOf="@+id/tv_average_sprint_points"
        app:layout_constraintTop_toTopOf="@+id/tv_average_sprint_points" />

    <TextView
        android:id="@+id/tv_average_sprint_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/spinner_sprint_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sprint_points"
        tools:text="15" />

    <Spinner
        android:id="@+id/spinner_sprint_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:entries="@array/sprint_length_entries"
        app:layout_constraintBottom_toTopOf="@+id/button_sprint"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>